addded header and nav

--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wiki Page</title>
   </head>
+  <header>
+    <nav></nav>
+  </header>
+  <html></html>
   <body></body>
 </html>
