--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Wiki Page</title>
   </head>
   <header>
+    <h1>Michelle Owens:Things I Like</h1>
     <nav></nav>
   </header>
   <html></html>
