--- a/index.html
+++ b/index.html
@@ -6,10 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wiki Page</title>
   </head>
-  <header>
-    <h1>Michelle Owens:Things I Like</h1>
-    <nav></nav>
-  </header>
-  <html></html>
-  <body></body>
+  <body>
+    <header>
+      <h1>Michelle Owens:Things I Like</h1>
+      <nav>
+        <a href="Running">Running</a>
+        <a href="Teaching">Teaching</a>
+        <a href="Desiging Sneakers">Designing Sneakers</a>
+      </nav>
+      <main>
+        <article id="Running"></article>
+        <h2>Running</h2>
+        <article id="Teaching">
+          <h2>Teaching</h2>
+        </article>
+        <article id="Designing Sneakers">
+          <h2>Designing Sneakers</h2>
+        </article>
+      </main>
+    </header>
+  </body>
 </html>
