added article pictures

--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
         <a href="Desiging Sneakers">Designing Sneakers</a>
       </nav>
       <main>
-        <article id="Running"></article>
-        <h2>Running</h2>
+        <article id="Running">
+          <h2>Running</h2>
+          <hr />
+          <img src="./images/runner.jpeg" alt="Michelle before Race" />
+          <!--horizontal rule that is used to separate content or define a change - in class demo-->
+        </article>
         <article id="Teaching">
           <h2>Teaching</h2>
+          <hr />
+          <img src="./images/TEFL.jpg" alt="" />
         </article>
         <article id="Designing Sneakers">
           <h2>Designing Sneakers</h2>
+          <hr />
+          <img src="./images/DapperKnox.PNG" alt="" />
         </article>
       </main>
     </header>
