added pic descrption to alt

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <article id="Teaching">
           <h2>Teaching</h2>
           <hr />
-          <img src="./images/TEFL.jpg" alt="" />
+          <img src="./images/TEFL.jpg" alt="Aboard teaching certification" />
         </article>
         <article id="Designing Sneakers">
           <h2>Designing Sneakers</h2>
           <hr />
-          <img src="./images/DapperKnox.PNG" alt="" />
+          <img src="./images/DapperKnox.PNG" alt="Dapper Knox shoe Design" />
         </article>
       </main>
     </header>
