--- a/index.html
+++ b/index.html
@@ -19,17 +19,28 @@
           <h2>Running</h2>
           <hr />
           <img src="./images/runner.jpeg" alt="Michelle before Race" />
+          <section>
+            <h3>What made me become a runner</h3>
+          </section>
           <!--horizontal rule that is used to separate content or define a change - in class demo-->
         </article>
+        <hr />
         <article id="Teaching">
           <h2>Teaching</h2>
           <hr />
           <img src="./images/TEFL.jpg" alt="Aboard teaching certification" />
+          <section>
+            <h3>Why I started Teaching</h3>
+          </section>
         </article>
+        <hr />
         <article id="Designing Sneakers">
           <h2>Designing Sneakers</h2>
           <hr />
           <img src="./images/DapperKnox.PNG" alt="Dapper Knox shoe Design" />
+          <section>
+            <h3>I love Sneakers</h3>
+          </section>
         </article>
       </main>
     </header>
