added paragraph to article id=Running, added <nav>  and 2 external hyperlinks

--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
           <img src="./images/runner.jpeg" alt="Michelle before Race" />
           <section>
             <h3>What made me become a runner</h3>
+            <p>
+              When I was a kid I would literally always run. My family would
+              always tell me "Michelle!! please stop running before you hurt
+              yourself, just walk". When I turned 5 years old is my mom put me
+              in track and field. I went on the run AAU track and field every
+              summer. Once I got into highschool, I began placing at state
+              levels and even got full ride scholarships for college.
+              Fast-forward to today I still love running on a competitive level.
+              I have 3 full marathons under my belt and I'm training for my 4th
+              one.
+            </p>
+            <nav>
+              <a href="https://www.atlantatrackclub.org/">Atlanta Track Club</a>
+              <a href="https://www.runnersworld.com">Runners World</a>
+            </nav>
           </section>
           <!--horizontal rule that is used to separate content or define a change - in class demo-->
         </article>
@@ -31,6 +46,7 @@
           <img src="./images/TEFL.jpg" alt="Aboard teaching certification" />
           <section>
             <h3>Why I started Teaching</h3>
+            <p></p>
           </section>
         </article>
         <hr />
