added paragraph to article id=Teaching and Designing sneakers, added <nav> and hyperlinks

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               levels and even got full ride scholarships for college.
               Fast-forward to today I still love running on a competitive level.
               I have 3 full marathons under my belt and I'm training for my 4th
-              one.
+              one. Running is my peace.
             </p>
             <nav>
               <a href="https://www.atlantatrackclub.org/">Atlanta Track Club</a>
@@ -46,7 +46,23 @@
           <img src="./images/TEFL.jpg" alt="Aboard teaching certification" />
           <section>
             <h3>Why I started Teaching</h3>
-            <p></p>
+            <p>
+              My interest in teaching began college. During the summer I would
+              volunteer abroad to teach young learners english. After college I
+              went back Aboard for three months to teach adults english.
+              Teaching english to those who don't speak it became very inspiring
+              for me. I was giving others a chance to make their way to America
+              to get better education and jobs.
+            </p>
+            <nav>
+              <a
+                href="https://www.ipalfish.com/klian/web/dist/teacher/mobile/invite/teacher_invite.html?uid=3212420736&teacherregion=0"
+                >Palfish</a
+              >
+              <a href="https://www.goabroad.com/teach-abroad"
+                >Teaching Abroad</a
+              >
+            </nav>
           </section>
         </article>
         <hr />
@@ -56,6 +72,21 @@
           <img src="./images/DapperKnox.PNG" alt="Dapper Knox shoe Design" />
           <section>
             <h3>I love Sneakers</h3>
+            <p>
+              My first love for sneakers was 7. My parents purchased me a pair
+              Jordan 1 high top bred. Every since I have been become a sneaker
+              collector. In 2019 I became tired with the way sneakers had been
+              made. I felt like it was something missing. I sketched out a
+              design shopped them around. My first design got picked up by a
+              company names Alive shoes, located in Italy. By september 2019 my
+              shoes were out of production and ready to sell. I sold out the
+              first week and there after. I recently got them back in production
+              and as of October 30th they are available for purchase.
+            </p>
+            <nav>
+              <a href="https://www.aliveshoes.com/dapper-knox">DapperKnox</a>
+              <a href="https://www.aliveshoes.com">Alive Shoes</a>
+            </nav>
           </section>
         </article>
       </main>
