added footer,comment box and submit box

--- a/index.html
+++ b/index.html
@@ -88,6 +88,21 @@
               <a href="https://www.aliveshoes.com">Alive Shoes</a>
             </nav>
           </section>
+          <footer>
+            <p>By Michelle Owens</p>
+          </footer>
+          <form>
+          </label>
+          <label for="comment">
+            Comments:
+            <textarea
+              name="comment"
+              id="comment"
+              rows="4"
+              cols="40"
+              placeholder="Name? Email?"></textarea>
+              <input type="submit" value="Submit">
+          </form>
         </article>
       </main>
     </header>
