added orderd list

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
               I have 3 full marathons under my belt and I'm training for my 4th
               one. Running is my peace.
             </p>
+            <hr>
+            <ol>
+              <li>Be inspired</li>
+              <li>Healthy living</li>
+              <li>Run for your Life</li>
+            </ol>
             <nav>
               <a href="https://www.atlantatrackclub.org/">Atlanta Track Club</a>
               <a href="https://www.runnersworld.com">Runners World</a>
