added hr tags to Running and Teaching section and unordred list to teaching section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
               for me. I was giving others a chance to make their way to America
               to get better education and jobs.
             </p>
+            <hr>
+            <ul>
+              <li>Open doors</li>
+              <li>Travelers are dreamers</li>
+              <li>Teach to reach</li>
+            </ul>
             <nav>
               <a
                 href="https://www.ipalfish.com/klian/web/dist/teacher/mobile/invite/teacher_invite.html?uid=3212420736&teacherregion=0"
