--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header>
       <h1>Michelle Owens:Things I Like</h1>
       <nav>
-        <a href="#Running">Running</a>
+        <a href="#Running">Running</a><!--#link to scroll down to sections-->
         <a href="#Teaching">Teaching</a>
-        <a href="#Sneakers">Sneakers</a>
+        <a href="#Designing Sneakers"> Designing Sneakers</a>
       </nav>
       <main>
         <article id="Running">
