--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
           <section>
             <h3>What made me become a runner</h3>
             <p>
-              When I was a kid I would literally always run. My family would
+              When I was a kid I would literally would always run. My family would
               always tell me "Michelle!! please stop running before you hurt
               yourself, just walk". When I turned 5 years old is my mom put me
-              in track and field. I went on the run AAU track and field every
+              in track and field. I went on to the run AAU track and field every
               summer. Once I got into highschool, I began placing at state
               levels and even got full ride scholarships for college.
               Fast-forward to today I still love running on a competitive level.
@@ -53,12 +53,12 @@
           <section>
             <h3>Why I started Teaching</h3>
             <p>
-              My interest in teaching began college. During the summer I would
+              My interest in teaching began in college. During the summer I would
               volunteer abroad to teach young learners english. After college I
               went back Aboard for three months to teach adults english.
               Teaching english to those who don't speak it became very inspiring
               for me. I was giving others a chance to make their way to America
-              to get better education and jobs.
+              to get a better education and jobs.
             </p>
             <hr>
             <ul>
@@ -85,15 +85,16 @@
           <section>
             <h3>I love Sneakers</h3>
             <p>
-              My first love for sneakers was 7. My parents purchased me a pair
+              My first love for sneakers was 7 years old. My parents purchased me a pair of
               Jordan 1 high top bred. Every since I have been become a sneaker
               collector. In 2019 I became tired with the way sneakers had been
               made. I felt like it was something missing. I sketched out a
-              design shopped them around. My first design got picked up by a
-              company names Alive shoes, located in Italy. By september 2019 my
+              design,shopped them around. My first design got picked up by a
+              company Alive shoes, located in Italy. By september 2019 my
               shoes were out of production and ready to sell. I sold out the
               first week and there after. I recently got them back in production
-              and as of October 30th they are available for purchase.
+              and as of October 30th they are available for purchase. What drew
+              me to sneakers were the colors and how they felt on my feet.
             </p>
             <nav>
               <a href="https://www.aliveshoes.com/dapper-knox">DapperKnox</a>
